--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-dark navbar-static-top navbar-expand-md">
         <div class="container">
             <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span>
-            </button> <a class="navbar-brand" href="#">Everything Sharks</a>
+            </button> <a class="navbar-brand" href="#">UNIR - Everything Sharks</a>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav mr-auto">
                     <li class="active nav-item"><a href="/" class="nav-link">Home</a>
@@ -37,13 +37,15 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <h3>Not all sharks are alike</h3>
+                <h3>CONTENEDORES :) - Not all sharks are alike</h3>
                 <p>Though some are dangerous, sharks generally do not attack humans. Out of the 500 species known to researchers, only 30 have been known to attack humans.
                 </p>
             </div>
             <div class="col-lg-6">
-                <h3>Sharks are ancient</h3>
-                <p>There is evidence to suggest that sharks lived up to 400 million years ago.
+                <h3>15 - Mayo - 2023 / Sharks are ancient</h3>
+                <p>There is evidence to suggest that sharks lived up to 400 million years ago.                                        
+                </p>
+                <p>Hecha por Oscar Quesada Avalos para el curso de Contenedores                                        
                 </p>
             </div>
         </div>
